# MVPP2

./: README.md
creatortrustmvp/: API_SPEC.md  SETUP.md
creatortrustmvp/backend/: pyproject.toml
creatortrustmvp/backend/app/: auth.py  database.py  main.py  models.py
creatortrustmvp/frontend/: package-lock.json  package.json
creatortrustmvp/frontend/src/: App.tsx
creatortrustmvp/frontend/src/contexts/: AuthContext.tsx
creatortrustmvp/frontend/src/lib/: api.ts
creatortrustmvp/frontend/src/pages/: ApplyToCampaign.tsx  BrandDashboard.tsx  BrandProfile.tsx  CampaignDetail.tsx  Campaigns.tsx  CreateCampaign.tsx  CreatorDashboard.tsx  CreatorProfile.tsx  DiscoverCampaigns.tsx  DiscoverCreators.tsx  ForgotPassword.tsx  LandingPage.tsx  Login.tsx  OnboardingFlow.tsx  Payments.tsx  Register.tsx  ResetPassword.tsx  SearchCreators.tsx  Settings.tsx  SignUp.tsx  UpgradePromptModal.tsx
